--- a/Spinel/nbproject/private/private.properties
+++ b/Spinel/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\darh_\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
+user.properties.file=C:\\Users\\DigitalMonster\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
